# itaoagpt

./: .gitignore  .mcp.example.json  CHANGELOG.md  README.md  d2.json  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
src/itaoagpt/: __init__.py
src/itaoagpt/cli/: main.py
src/itaoagpt/core/: engine.py  fingerprint.py  render_text.py  triage.py
src/itaoagpt/core/analyzers/: __init__.py  log.py
tools/: contract_tests.ps1  release.ps1  release_check.ps1  smoke_text.ps1
