[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "itaoagpt"
version = "0.1.0"
description = "ItaoaGPT - CLI-first AI analysis tool"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
itaoagpt = "itaoagpt.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
